<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:text="@string/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="10"
        android:id="@+id/message" />

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_bug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bug" >
            
            
        </RadioButton>

        <RadioButton
            android:id="@+id/radio_idea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idea"
             >
        </RadioButton>

        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_other" >
        </RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:style="?android:attr/buttonBarStyle">

        <Button
            android:style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Send" 
            android:id="@+id/send"
            android:onClick="onClick"/>
       

        <Button
            android:style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:id="@+id/cancel" 
            android:onClick="onClick"/>

      
      
    </LinearLayout>

</LinearLayout>